Change Tumblr icon to Linkedin

--- a/elements.html
+++ b/elements.html
@@ -124,7 +124,7 @@
 																<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 																<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 																<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-																<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+																<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 															</ul>
 
 														</div>
