--- a/elements.html
+++ b/elements.html
@@ -123,8 +123,8 @@
 																<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 																<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 																<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-																<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-																<li><a href="#" class="fa-thin fa-envelope"><span class="label">email</span></a></li>
+																<li><a href="#" class="fa-thin fa-paper-plane"><span class="label">email</span></a></li>
+																<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 															</ul>
 
 														</div>
