--- a/elements.html
+++ b/elements.html
@@ -123,7 +123,7 @@
 																<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 																<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 																<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-																<li><a href="#" class="fa-thin fa-paper-plane"><span class="label">email</span></a></li>
+																<li><i class="fa-thin fa-paper-plane"><span class="label">email</span></a></li>
 																<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 															</ul>
 
