--- a/elements.html
+++ b/elements.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <!--
-	Editorial by HTML5 UP
+	Editorial
+	Template downloaded from HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -119,12 +120,13 @@
 
 															<h4>Icons</h4>
 															<ul class="icons">
-																<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+																<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+																<li><a href="https://github.com/Tianawangty" class="icon brands fa-github"><span class="label">Github</span></a></li>
+																<li><a href="https://twitter.com/twangtiana" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+																<!--
 																<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 																<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-																<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-																<li><i class="fa-thin fa-paper-plane"><span class="label">email</span></a></li>
-																<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+																-->
 															</ul>
 
 														</div>
