--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Editorial
-	Template downloaded from HTML5 UP
+	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Tianyuan Wang</title>
+		<title>Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,15 +22,13 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> goes by Tiana</a>
+									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-										<li><a href="https://github.com/Tianawangty" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="https://twitter.com/twangtiana" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<!--
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										-->
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -169,7 +166,6 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">Generic</a></li>
-										<!--
 										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Submenu</span>
@@ -194,7 +190,6 @@
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
-									-->
 									</ul>
 								</nav>
 
