--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hello and Welcome<br />
-											I'm Tiana</h1>
+											<h1>Hello and Welcome</h1> <!-- <br /> -->
+											</h2>I'm Tiana</h2>
 											<p>Big Data Enthusiast | Social Science</p>
 										</header>
 										<p>Welcome to this little space for some of my personal thoughts, nice to see you here. My weekly post scheduled on every Sunday and please feel free to comment back or share your thoughts as well! :)<br />
@@ -81,7 +81,7 @@
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Intrinsic biase indeed</h3>
+												<h3>Tendentiousness is intrinsic</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
