--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 									<a href="index.html" class="logo"><strong>Weblog</strong> by Tianyuan (Tiana) Wang</a>
 									<ul class="icons">
 										<li><a href="https://twitter.com/tianawangty" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-LinkedIn"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
@@ -32,14 +33,16 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hello and Welcome</h1> <!-- <br /> -->
+											<h1>Greetings!</h1> <!-- <br /> -->
 											</h2>I'm Tiana</h2>
-											<p>Big Data Enthusiast | Social Science</p>
+											<p>Economic Research and Big Data Enthusiast</p>
 										</header>
-										<p>Welcome to this little space for some of my personal thoughts, nice to see you here. My weekly post scheduled on every Sunday and please feel free to comment back or share your thoughts as well! :)<br />
-										To see my resume, please click the "learn more" below.</p>
+										<p>WI'm delighted to have you visit my personal webpage. Allow me to introduce myself. I am a passionate PhD student at the University of Georgia, specializing in econometrics and quantitative economics. My research interests lie in the captivating realms of green economics and growth, energy economics, and international trade pertaining to energy and environmental goods and policies. I possess a keen enthusiasm for employing big data to address economic inquiries, interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</p>
+										<p> Before embarking on my doctoral journey, I served as a research analyst at the esteemed International Monetary Fund (IMF) in the Africa Department, focusing on southern African countries. Alongside my daily responsibilities, I actively engaged in diverse projects, ranging from early detection of economic crises to identifying game-changing climate policies. These experiences fostered a deep appreciation for the intricate interplay between economics and global affairs.</p>
+										<p>My educational background encompasses a Master of Science degree in Data Analytics and Policies from Johns Hopkins University, where I enhanced my proficiency in harnessing the power of data to inform policy decisions. Complementing this, my academic foundation was laid at Hong Kong Baptist University, where I obtained a Bachelor of Business Administration (BBA) degree in Applied Economics.</p>
+										<p>My personal webpage serves as a platform to share my insights, research endeavors, and contributions to the field of economics. I invite you to explore this space and engage with me in fruitful discussions on the intersection of economics, sustainability, and data-driven solutions. Together, let us endeavor to shape a brighter and more prosperous future.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">Connect via LinkedIn</a></li>
 										</ul>
 									</div>
 									<span class="image object">
