--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Weblog</strong> by Tianyuan (Tiana) Wang</a>
+									<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 									<ul class="icons">
 										<li><a href="https://twitter.com/tianawangty" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-LinkedIn"><span class="label">LinkedIn</span></a></li>
@@ -34,7 +34,6 @@
 									<div class="content">
 										<header>
 											<h1>Greetings!</h1> <!-- <br /> -->
-											</h2>I'm Tiana</h2>
 											<p>Economic Research and Big Data Enthusiast</p>
 										</header>
 										<p><span class="image right"><img src="images/biopic.png" alt="" /></span>I'm delighted to have you visit my personal webpage. Allow me to introduce myself. I am a passionate PhD student at the University of Georgia, specializing in econometrics and quantitative economics. My research interests lie in the captivating realms of green economics and growth, energy economics, and international trade pertaining to energy and environmental goods and policies. I possess a keen enthusiasm for employing big data to address economic inquiries, interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</p>
