--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 									</div>
 								</section>
 
+						</div>
+					</div>
+
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
