--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<header class="major">
 										<h2>Contact Information</h2>
 									</header>
-									<p>Connecting via <a href="https://www.linkedin.com/in/tianawangty/">LinkedIn is welcome</p>
+									<p>Connecting via <a href="https://www.linkedin.com/in/tianawangty/">LinkedIn</a> is welcome</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">twang@uga.edu</a></li>
 										<li class="icon solid fa-home">Department of Agricultural & Applied Economics<br />
