--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-paper-signal"></span>
 											<div class="content">
-												<h3>Risk Appetite and Individual Resilliance</h3>
+												<h3>Risk Appetite and Resilliance</h3>
 													<ul>
-														<li>Individual behaviors</li>
+														<li>Individual responses on climate policies</li>
 														<li>Firms risk aversion</li>
 													</ul>
 											</div>
