--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Green Economics for Sustainability</h3>
+												<h3>Green Economics</h3>
 													<ul>
 														<li>Green transition</li>
-														<li>Climate change financing</li>
+														<li>Climate financing</li>
 														<li>Impact evaluation</li>
 														<li>Carbon trade</li>
 													</ul>
@@ -66,10 +66,11 @@
 										<article>
 											<span class="icon solid fa-paper-signal"></span>
 											<div class="content">
-												<h3>Risk Appetite and Resilliance</h3>
+												<h3>Behavioral Economics</h3>
 													<ul>
-														<li>Individual responses on climate policies</li>
-														<li>Firms risk aversion</li>
+														<li>Perception changes in renewable energy</li>
+														<li>Resilliance and preference on energy consumption</li>
+														<li>Risk appetite and aversion</li>
 													</ul>
 											</div>
 										</article>
@@ -102,8 +103,8 @@
 										<li>
 											<span class="opener">Past Projects</span>
 											<ul>
-												<li><a href="https://github.com/Tianawangty/Hong-Kong-Twitter-Text-Analysis">Hong Kong Twitter Text Analysis</a></li>
-												<li><a href="https://github.com/Tianawangty/climate.policies.analysis">Climate Policies Analysis</a></li>
+												<li><a href="https://github.com/Tianawangty/Hong-Kong-Twitter-Text-Analysis">Hong Kong Twitter Text Analysis @JHU</a></li>
+												<li><a href="https://github.com/Tianawangty/climate.policies.analysis">Climate Policies Analysis @IMF</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -117,7 +118,7 @@
 									<p>Connecting via <a href="https://www.linkedin.com/in/tianawangty/">LinkedIn</a> is welcome</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">twang@uga.edu</a></li>
-										<li class="icon solid fa-home">Department of Agricultural & Applied Economics<br />
+										<li class="icon solid fa-signal">Department of Agricultural & Applied Economics<br />
 											University of Georgia<br />
 											Athens, GA, US</li>
 									</ul>
@@ -127,10 +128,8 @@
 								<footer id="footer">
 									<p class="copyright">&copy; Tianyuan Wang. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
-
 						</div>
 					</div>
-
 			</div>
 
 		<!-- Scripts -->
