--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-signal"></span>
+											<span class="icon fa-paper-signal"></span>
 											<div class="content">
 												<h3>Behavioral Economics</h3>
 													<ul>
