--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-paper-signal"></span>
+											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Behavioral Economics</h3>
 													<ul>
@@ -118,7 +118,7 @@
 									<p>Connecting via <a href="https://www.linkedin.com/in/tianawangty/">LinkedIn</a> is welcome</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">twang@uga.edu</a></li>
-										<li class="icon solid fa-signal">Department of Agricultural & Applied Economics<br />
+										<li class="icon solid fa-home">Department of Agricultural & Applied Economics<br />
 											University of Georgia<br />
 											Athens, GA, US</li>
 									</ul>
