--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 												<h3>With a green mindset</h3>
 													<ul>
 														<li>Changes in perception</li>
-														<li>Green Speculators</li>
+														<li>Green speculators</li>
 														<li>Risk appetite and aversion</li>
 													</ul>
 											</div>
