--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 										<h1>Research</h1>
 									</header>
 
-									<p>My research are intersected with Energy and Environmental Economics, International Economics, and Policy Evaluation.</p>
+									<p>My research are intersected with Green Economics and Policy Evaluation.</p>
 
 									<hr class="major" />
 
