--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
 									<p>Connecting via <a href="https://www.linkedin.com/in/tianawangty/">LinkedIn</a> is welcome</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">twang@uga.edu</a></li>
-										<li class="icon solid fa-home">Department of Agricultural & Applied Economics<br />
+										<li class="icon solid fa-home"><a href="https://www.caes.uga.edu/about/personnel/person/23865/tiana-wang">Department of Agricultural & Applied Economics<br />
 											University of Georgia<br />
 											Athens, GA, US</li>
 									</ul>
