--- a/cv.html
+++ b/cv.html
@@ -31,10 +31,10 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h2>Generic</h2>
+										<h2>Coming Soon</h2>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<span class="image main"><img src="images/gmorning.jpeg" alt="" /></span>
 
 									<p>Download the CV here.</p>
 									<p>Download the resume here.</p>
@@ -83,7 +83,7 @@
 									<p>Connecting via <a href="https://www.linkedin.com/in/tianawangty/">LinkedIn</a> is welcome</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">twang@uga.edu</a></li>
-										<li class="icon solid fa-home">Department of Agricultural & Applied Economics<br />
+										<li class="icon solid fa-home"><a href="https://www.caes.uga.edu/about/personnel/person/23865/tiana-wang">Department of Agricultural & Applied Economics<br />
 											University of Georgia<br />
 											Athens, GA, US</li>
 									</ul>
