--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 										<ul class="actions">
 											<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">Connect via LinkedIn</a></li>
 										</ul>
-										<p><span class="image right"><img src="images/biopic.png" alt="" /></span>I'm delighted to have you visit my personal webpage. Allow me to introduce myself. I am currently a Ph.D. student in the Department of Agriculture and Applied Economics at the University of Georgia. My research interests lie in the captivating realms of green economics and growth and international trade pertaining to energy and environmental goods and policies. I possess a keen enthusiasm for employing big data to address economic inquiries, interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</p>
+										<p><span class="image right"><img src="images/biopic.png" alt="" /></span>I'm delighted to have you visit my personal webpage. Allow me to introduce myself. I am currently a Ph.D. student in the Department of Agriculture and Applied Economics at the University of Georgia. My research interests lie in the captivating realms of <strong>development economics</strong> and <strong>international trade</strong> pertaining to <strong>green transition</strong>. I possess a keen enthusiasm for employing big data to address economic inquiries, interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</p>
 										<p> Before embarking on my doctoral journey, I served as a research analyst at the esteemed International Monetary Fund (IMF) in the Africa Department, focusing on southern African countries. Alongside my daily responsibilities, I actively engaged in diverse projects, ranging from early detection of economic crises to identifying game-changing climate policies. These experiences fostered a deep appreciation for the intricate interplay between economics and global affairs.</p>
 										<p>My educational background encompasses a Master of Science degree in Data Analytics and Policies from Johns Hopkins University, where I enhanced my proficiency in harnessing the power of data to inform policy decisions. Complementing this, my academic foundation was laid at Hong Kong Baptist University, where I obtained a Bachelor of Business Administration (BBA) degree in Applied Economics.</p>
 										<p>My personal webpage serves as a platform to share my insights, research endeavors, and contributions to the field of economics. I invite you to explore this space and engage with me in fruitful discussions on the intersection of economics, sustainability, and data-driven solutions. Together, let us endeavor to shape a brighter and more prosperous future.</p>
@@ -59,7 +59,6 @@
 														<li>Green transition</li>
 														<li>Climate financing</li>
 														<li>Impact evaluation</li>
-														<li>International trade</li>
 													</ul>
 											</div>
 										</article>
@@ -68,7 +67,7 @@
 											<div class="content">
 												<h3>With a green mindset</h3>
 													<ul>
-														<li>Changes in perception</li>
+														<li>Scale-up Effect</li>
 														<li>Green speculators</li>
 														<li>Risk appetite and aversion</li>
 													</ul>
