Test try with resume

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<header id="header">
 					<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 					<ul class="icons">
-						<li><a href="https://twitter.com/tianawangty" class="icon brands fa-twitter"><span
+						<li><a href="tianawangty.github.io/assets/Resume_TW_2024_Aug.pdf" class="icon brands fa-Github"><span
 									class="label">Twitter</span></a></li>
 					</ul>
 				</header>
@@ -41,6 +41,9 @@
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">Connect via
 									LinkedIn</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">See Resume</a></li>
 						</ul>
 						<p><span class="image right"><img src="images/biopic.png" alt="" /></span>I'm delighted to have
 							you visit my personal webpage. Allow me to introduce myself. I am currently a Ph.D. student
@@ -79,7 +82,6 @@
 								<h3>Balance the growth</h3>
 								<ul>
 									<li>Green transition</li>
-									<li>Climate financing</li>
 									<li>Impact evaluation</li>
 								</ul>
 							</div>
