Update the homepage and resume

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<header id="header">
 					<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 					<ul class="icons">
-						<li><a href="tianawangty.github.io/assets/Resume_TW_2024_Aug.pdf" class="icon brands fa-Github"><span
-									class="label">Twitter</span></a></li>
+						<li><a href="tianawangty.github.io" class="icon brands fa-github"><span
+									class="label">Github</span></a></li>
 					</ul>
 				</header>
 
@@ -39,12 +39,13 @@
 							<p>Economic Research and Big Data Enthusiast</p>
 						</header>
 						<ul class="actions">
+							<li><a href="tianawangty.github.io/pdf/Resume_TW_2024_Aug.pdf" class="button big">See Resume</a></li>
+						</ul>
+						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">Connect via
 									LinkedIn</a></li>
 						</ul>
-						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">See Resume</a></li>
-						</ul>
+						
 						<p><span class="image right"><img src="images/biopic.png" alt="" /></span>I'm delighted to have
 							you visit my personal webpage. Allow me to introduce myself. I am currently a Ph.D. student
 							in the Department of Agriculture and Applied Economics at the University of Georgia. My
@@ -91,8 +92,7 @@
 							<div class="content">
 								<h3>With a green mindset</h3>
 								<ul>
-									<li>Scale-up Effect</li>
-									<li>Green speculators</li>
+									<li>Effective Scale-up</li>
 									<li>Risk appetite and aversion</li>
 								</ul>
 							</div>
@@ -122,7 +122,9 @@
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li><a href="cv.html">Curriculum Vitae</a></li>
+						<!--
+						<li><a href="cv.html">Curriculum Vitae</a></li> 
+						-->
 						<li>
 							<span class="opener">Past Projects</span>
 							<ul>
