--- a/research.html
+++ b/research.html
@@ -24,7 +24,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 									<ul class="icons">
-										<li><a href="https://twitter.com/tianawangty" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="tianawangty.github.io" class="icon brands fa-github"><span
+													class="label">Github</span></a></li>
 									</ul>
 								</header>
 
@@ -33,8 +34,7 @@
 									<header class="main">
 										<h1>Research</h1>
 									</header>
-
-									<p>My research are intersected with Green Economics and Policy Evaluation.</p>
+									<p></p>
 
 									<hr class="major" />
 
@@ -44,7 +44,7 @@
 									<hr class="major" />
 
 									<h2>Work in Progress</h2>
-									<p> </p>
+									<p> “Government Funding, R&D, and Climate Technologies” with Susana Ferreira (advisor).</p>
 
 									<hr class="major" />
 
@@ -74,7 +74,9 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="research.html">Research</a></li>
-										<li><a href="cv.html">Curriculum Vitae</a></li>
+										<!--
+										<li><a href="cv.html">Curriculum Vitae</a>
+										</li>-->
 										<li>
 											<span class="opener">Past Projects</span>
 											<ul>
