--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<header id="header">
 					<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 					<ul class="icons">
-						<li><a href="tianawangty.github.io" class="icon brands fa-github"><span
+						<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-linkedin"><span
 									class="label">Github</span></a></li>
 					</ul>
 				</header>
@@ -39,7 +39,7 @@
 							<p>Economic Research and Big Data Enthusiast</p>
 						</header>
 						<ul class="actions">
-							<li><a href="tianawangty.github.io/pdf/Resume_TW_2024_Aug.pdf" class="button big">See Resume</a></li>
+							<li><a href="http://tianawangty.github.io/pdf/Resume_TW_2024_Aug.pdf" class="button big">See Resume</a></li>
 						</ul>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/tianawangty/" class="button big">Connect via
@@ -64,10 +64,10 @@
 							power of data to inform policy decisions. Complementing this, my academic foundation was
 							laid at Hong Kong Baptist University, where I obtained a Bachelor of Business Administration
 							(BBA) degree in Applied Economics.</p>
-						<p>My personal webpage serves as a platform to share my insights, research endeavors, and
+						<!-- <p>My personal webpage serves as a platform to share my insights, research endeavors, and
 							contributions to the field of economics. I invite you to explore this space and engage with
 							me in fruitful discussions on the intersection of economics, sustainability, and data-driven
-							solutions. Together, let us endeavor to shape a brighter and more prosperous future.</p>
+							solutions. Together, let us endeavor to shape a brighter and more prosperous future.</p> -->
 					</div>
 				</section>
 
