--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-linkedin"><span
-									class="label">Github</span></a></li>
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</header>
 
