--- a/research.html
+++ b/research.html
@@ -24,8 +24,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Tianyuan Wang</strong> Tiana</a>
 									<ul class="icons">
-										<li><a href="tianawangty.github.io" class="icon brands fa-github"><span
-													class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/tianawangty/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
