Update on resume

--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
 									<hr class="major" />
 
 									<h2>Work in Progress</h2>
-									<p> “Government Funding, R&D, and Climate Technologies” with Susana Ferreira (advisor).</p>
+									<p> “Government R&D and Climate Change Technologies” with Dr. Susana Ferreira (advisor).</p>
 
 									<hr class="major" />
 
