Update Main Page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 							in the Department of Agriculture and Applied Economics at the University of Georgia. My
 							research interests lie in the captivating realms of <strong>economic growth</strong>
 							</strong> pertaining to <strong>green transition</strong>. I possess a keen enthusiasm for
-							employing big data to address economic inquiries, interlinking microscopic pixels to provide
-							a more dynamic perspective and elucidate macro phenomena.</p>
+							employing <strong>big data</strong> to address economic inquiries,  <strong>interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</strong></p>
 						<p> Before embarking on my doctoral journey, I served as a research analyst at the esteemed
 							International Monetary Fund (IMF) in the Africa Department, focusing on southern African
 							countries. Alongside my daily responsibilities, I actively engaged in diverse projects,
@@ -82,7 +81,7 @@
 							<div class="content">
 								<h3>Balance the growth</h3>
 								<ul>
-									<li>Green transition</li>
+									<li>Structural Transformation</li>
 									<li>Impact evaluation</li>
 								</ul>
 							</div>
