--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 							you visit my personal webpage. Allow me to introduce myself. I am currently a Ph.D. student
 							in the Department of Agriculture and Applied Economics at the University of Georgia. My
 							research interests lie in the captivating realms of <strong>economic growth</strong>
-							</strong> pertaining to <strong>green transition</strong>. I possess a keen enthusiasm for
-							employing <strong>big data</strong> to address economic inquiries,  <strong>interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</strong></p>
+							</strong> pertaining to <strong>structural transformation</strong>. I possess a keen enthusiasm for employing <strong>big data</strong> to address economic inquiries,  <strong>interlinking microscopic pixels to provide a more dynamic perspective and elucidate macro phenomena.</strong></p>
 						<p> Before embarking on my doctoral journey, I served as a research analyst at the esteemed
 							International Monetary Fund (IMF) in the Africa Department, focusing on southern African
 							countries. Alongside my daily responsibilities, I actively engaged in diverse projects,
@@ -82,7 +81,7 @@
 								<h3>Balance the growth</h3>
 								<ul>
 									<li>Structural Transformation</li>
-									<li>Impact evaluation</li>
+									<li>Impact Evaluation</li>
 								</ul>
 							</div>
 						</article>
@@ -92,7 +91,7 @@
 								<h3>With a green mindset</h3>
 								<ul>
 									<li>Effective Scale-up</li>
-									<li>Risk appetite and aversion</li>
+									<li>Risk Appetite and Aversion</li>
 								</ul>
 							</div>
 						</article>
